--- a/app/views/deals/_body_bestdeals.html.erb
+++ b/app/views/deals/_body_bestdeals.html.erb
@@ -48,6 +48,96 @@
 <p>run out of stock soon</p>
 -->
 
+<div class="card clearfix" data-score="31" data-price="44.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2LT59tx"><img src="https://images-na.ssl-images-amazon.com/images/I/71muJTFkgAL._SX679_.jpg" alt="Cressi Scuba Diving Snorkeling Freediving Mask" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>1,256 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>31% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2LT59tx">Cressi Scuba Diving Snorkeling Freediving Mask Snorkel Set</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$44.99</span><span class="ori_price">$64.95</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2LT59tx">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="23" data-price="26.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Jo0SfE"><img src="https://images-na.ssl-images-amazon.com/images/I/61gzKRyOtOL._SX679_.jpg" alt="Adidas Defender III Duffel Bag" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>458 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>23% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Jo0SfE">Adidas Defender III Duffel Bag, Small</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$26.99</span><span class="ori_price">$35.00</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Jo0SfE">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="39" data-price="84.91">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2JpNPui"><img src="https://images-na.ssl-images-amazon.com/images/I/71GYQiBcEdL._SX679_.jpg" alt="Fabric Steamer" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>779 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>39% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2JpNPui">Rowenta IS6520 Master 360 Full Size Garment and Fabric Steamer with Rotating hanger, 1500-Watt, Blue</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$84.91</span><span class="ori_price">$139.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2JpNPui">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="37" data-price="25.19">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Xy1MKA"><img src="https://images-na.ssl-images-amazon.com/images/I/81P3mjM2BFL._SX679_.jpg" alt="Marvel MVA-278 Captain America Waffle Maker" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>251 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>37% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Xy1MKA">Marvel MVA-278 Captain America Waffle Maker, Blue</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$25.19</span><span class="ori_price">$39.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Xy1MKA">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="46" data-price="54.47">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2xDl3Qb"><img src="https://images-na.ssl-images-amazon.com/images/I/71IEpBPdChL._SX522_.jpg" alt="NutriChef Vacuum Sealer" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>5,358 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>46% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2xDl3Qb">NutriChef Vacuum Sealer | Automatic Vacuum Air Sealing System For Food Preservation w/ Starter Kit | Compact Design...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$54.47</span><span class="ori_price">$99.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2xDl3Qb">Shop Now at Amazon</a></div>
+</div>
+
 <div class="card clearfix" data-score="40" data-price="59.99">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2LIHkEn"><img src="https://images-na.ssl-images-amazon.com/images/I/817Om0cdRLL._SX522_.jpg" alt="Instant Pot DUO60 6 Qt ..." /></a>
