--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -27,6 +27,207 @@
  <p>run out of stock soon</p>
 -->
 
+<div class="card clearfix" data-score="40" data-price="23.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2JskyOg"><img src="https://m.media-amazon.com/images/I/8109jim0gbL._SR400,400_.jpg" alt="BarkBox Memory Foam Dog Bed" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>938 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2JskyOg">BarkBox S/M/L/XL Orthopedic Memory Foam Dog Bed or Crate Mat, 4 Colors; Ultra Plush Pressure-Relief, Removable...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$23.99</span><span class="ori_price">$39.99</span></address>
+      <p><span>Take <strong>40% off at $39.99</strong> with promo code: <strong>40K5GCJC</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 13, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2JskyOg">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="14.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Jr4pKl"><img src="https://m.media-amazon.com/images/I/71OPVC+WoQL._SR400,400_.jpg" alt="3 Tier Spice Rack Organizer " /></a>
+    <div class="rating"><p>0 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Jr4pKl">3 Tier Spice Rack Organizer for Pantry Kitchen Cabinet Countertop Holds 18 Jars with Drawers Storage</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$14.99</span><span class="ori_price">$29.99</span></address>
+      <p><span>Take <strong>50% off at $29.99</strong> with promo code: <strong>50BGEVN3</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 09, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Jr4pKl">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="51" data-price="9.74">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2xEwoQc"><img src="https://m.media-amazon.com/images/I/61CrusygM+L._SR400,400_.jpg" alt="18 Super Pigmented " /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>2,489 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>51% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2xEwoQc">18 Super Pigmented - Top Influencer Professional Eyeshadow Palette all finishes, 5 Matte + 9 Shimmer + 4 Duochrome...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$9.74</span><span class="ori_price">$19.87</span></address>
+      <p><span>Take <strong>51% off at $19.87</strong> with promo code: <strong>51CZ32NU</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 09, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2xEwoQc">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="discounted_price">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2JnWZay"><img src="https://m.media-amazon.com/images/I/61kx4FYAo3L._SR400,400_.jpg" alt="Betitay 100W Vacuum Food Sealer Machine" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>32 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2JnWZay">Betitay 100W Vacuum Food Sealer Machine Universal Voltage for Dry Moist Food Preservation,Container,Marinat with ...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$discounted_price</span><span class="ori_price">$79.99</span></address>
+      <p><span>Take <strong>50% off at $79.99</strong> with promo code: <strong>50HHA8OI</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 09, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2JnWZay">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="60" data-price="10.40">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2LJO0lS"><img src="https://m.media-amazon.com/images/I/61uITsmACIL._SR400,400_.jpg" alt="SHENMATE Pet Paw Cleaner" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>38 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>60% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2LJO0lS">SHENMATE Pet Paw Cleaner, No-Rinse Waterless Shampoo for Small Medium Large Dogs Cats, Foot Cleaning Foam Washer,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$10.40</span><span class="ori_price">$25.99</span></address>
+      <p><span>Take <strong>60% off at $25.99</strong> with promo code: <strong>609C1G2D</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 11, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2LJO0lS">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="30" data-price="24.49">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2LJpIZ3"><img src="https://m.media-amazon.com/images/I/61fX-piCssL._SR400,400_.jpg" alt=">Wireless Earbuds" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>157 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2LJpIZ3">Wireless Earbuds, HSPRO True Wireless Earphones, Stereo Sound Bluetooth 5.0 Headphones, Mini Wireless in-Ear Headsets with Built in Microphone and Charging Case</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$24.49</span><span class="ori_price">$34.99</span></address>
+      <p><span>Take <strong>30% off at $34.99</strong> with promo code: <strong>30H36UMA</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 31, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2LJpIZ3">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="20" data-price="9.59">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XCUBFR"><img src="https://m.media-amazon.com/images/I/61snoKPRs1L._SR400,400_.jpg" alt="Wireless Charger" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>1,498 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>20% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2XCUBFR">Wireless Charger, Seneo 10W Fast Qi Wireless Charging Pad, 7.5W Compatible iPhone Xs Max/Xs/XR/X/8/8P/New Airpods,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$9.59</span><span class="ori_price">$11.99</span></address>
+      <p><span>Take <strong>20% off at $11.99</strong> with promo code: <strong>207IKK2B</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 11, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2XCUBFR">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="30" data-price="8.39">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Xyterv"><img src="https://m.media-amazon.com/images/I/61SpZVgfHKL._SR400,400_.jpg" alt="Rechargeable Wireless Mouse" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>308 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Xyterv">Rechargeable Wireless Mouse, Topist 2.4Ghz Slim Noiseless Mute Silent Click Optical Mouse Mice with USB Receiver Type C...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$8.39</span><span class="ori_price">$11.99</span></address>
+      <p><span>Take <strong>30% off at $11.99</strong> with promo code: <strong>30JAHTJ3</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 09, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Xyterv">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="55" data-price="9.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2xFPwNs"><img src="https://m.media-amazon.com/images/I/51JgU5ZvydL._SR400,400_.jpg" alt="Livho Blue Light Blocking Glasses" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>154 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>55% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2xFPwNs">Livho Blue Light Blocking Glasses Filter UV Glare Retro Round Ultra Lightweight Computer Game Glasses...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$9.00</span><span class="ori_price">$19.99</span></address>
+      <p><span>Take <strong>55% off at $19.99</strong> with promo code: <strong>55OFFJSS</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 21, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2xFPwNs">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="70" data-price="3.90">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2xD3KPp"><img src="https://m.media-amazon.com/images/I/61EsTlSh6BL._SR400,400_.jpg" alt="ZOORON Running Belt Waist Pack Bag" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>40 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>70% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2xD3KPp">ZOORON Running Belt Waist Pack Bag - Water Resistant Runners Belt Fanny Pack for Hiking Fitness</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$3.90</span><span class="ori_price">$12.99</span></address>
+      <p><span>Take <strong>70% off at $12.99</strong> with promo code: <strong>promo_code</strong></span></p>
+      <span class="ex_date">Expiration Date : End_date</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2xD3KPp">Use Code at Amazon</a></div>
+</div>
+
+
 <div class="card clearfix" data-score="40" data-price="8.99">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2JwBD9R"><img src="https://m.media-amazon.com/images/I/61SxzXGRhpL._SR400,400_.jpg" alt="Rii RKM709 2.4Ghz Ultra-Slim Wireless Keyboard" /></a>
