--- a/app/views/deals/_body_bestdeals.html.erb
+++ b/app/views/deals/_body_bestdeals.html.erb
@@ -48,6 +48,79 @@
 <p>run out of stock soon</p>
 -->
 
+<div class="card clearfix" data-score="60" data-price="43.47">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2xEB74o"><img src="https://images-na.ssl-images-amazon.com/images/I/712kBtTDt7L._SY879_.jpg" alt="WD Blue 1TB PC Hard Drive" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>9,359 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>60% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2xEB74o">WD Blue 1TB PC Hard Drive - 7200 RPM Class, SATA 6 Gb/s, 64 MB Cache, 3.5" - WD10EZEX</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$43.47</span><span class="ori_price">$109.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2xEB74o">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="66" data-price="63.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2JxM64V"><img src="https://images-na.ssl-images-amazon.com/images/I/41AGvSmY-fL.jpg" alt="Corsair Memory" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>22 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>66% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2JxM64V">Corsair CMK16GX4M2Z2400C16 Vengeance LPX 16GB (2x8GB) DDR4 2400 (PC4-19200) C16 1.2V Internal Memory...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$63.99</span><span class="ori_price">$185.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2JxM64V">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="39.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2LJRp48"><img src="https://images-na.ssl-images-amazon.com/images/I/51gvc83auzL.jpg" alt="PNY SSD" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>1,550 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2LJRp48">PNY CS1311 240GB 2.5” SATA III Internal Solid State Drive (SSD) - (SSD7CS1311-240-RB)</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$39.99</span><span class="ori_price">$80.26</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2LJRp48">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="52" data-price="29.92">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XA5P9f"><img src="https://images-na.ssl-images-amazon.com/images/I/619DLHm0z2L._SX679_.jpg" alt="Lodge 3 Quart Cast Iron Combo Cooker" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>3,108 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>52% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2XA5P9f">Lodge 3 Quart Cast Iron Combo Cooker. Pre-seasoned Cast Iron Skillet, Fryer, Dutch Oven, and Convertible Skillet/Griddle Lid</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$29.92</span><span class="ori_price">$62.00</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2XA5P9f">Shop Now at Amazon</a></div>
+</div>
+
+
 <div class="card clearfix" data-score="31" data-price="44.99">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2LT59tx"><img src="https://images-na.ssl-images-amazon.com/images/I/71muJTFkgAL._SX679_.jpg" alt="Cressi Scuba Diving Snorkeling Freediving Mask" /></a>
