--- a/app/views/guides/index.html.erb
+++ b/app/views/guides/index.html.erb
@@ -34,6 +34,15 @@
           <div class="btn"><a href="/guides/guide_02">Read More</a></div>
         </div>
 
+        <div class="filter-node promotion_box" data-filter='["characters","Gift for people who are CRAZY about MARVEL!"]'>
+          <div class="image_box"><a href="/guides/guide_03"><img src="https://images.unsplash.com/photo-1505489435671-80a165c60816?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="marvel"></a></div>
+          <div class="node-box inner">
+            <h2><a href="/guides/guide_03">Gift for people who are CRAZY about MARVEL!</a></h2>
+            <span>Last Updated: Jul. 10. 2019</span>
+          </div>
+          <div class="btn"><a href="/guides/guide_03">Read More</a></div>
+        </div>
+
         <div class="filter-node promotion_box" data-filter='["color","Gift for people who are crazy about PINK!"]'>
           <div class="image_box"><a href="/guides/guide_01"><img src="https://images.unsplash.com/photo-1490367605959-06955305859b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="pink"></a></div>
           <div class="node-box inner">
