--- a/app/assets/stylesheets/featured.css
+++ b/app/assets/stylesheets/featured.css
@@ -233,7 +233,7 @@
 .guide_show .last_column_box .column{border-bottom:1px solid #ccc;}
 .guide_show .shoes_column{float:left;width:20%;transition:0.3s;}
 .guide_show .column:hover{box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.2), 0 2px 10px 0 rgba(0, 0, 0, 0.2);cursor:pointer;}
-.guide_show .column img{width:100%;height:250px;object-fit:cover;}
+.guide_show .column img{width:100%;height:250px;object-fit:contain;}
 .guide_show .shoes_column img{object-fit:contain;padding:10px;}
 
 .guide_show .modal{overflow:scroll;background-color:white;position:fixed;left:0;top:-500%;height:100%;width:100%;transition:top 0.6s ease-in-out;z-index:500;}
@@ -557,6 +557,7 @@
 }
 .movie-card[data-section="deals"]{background-image:url(https://images.unsplash.com/photo-1561132680-1c6abcf10a81?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60);}
 .movie-card[data-section="batman"]{background-image:url(https://images.unsplash.com/photo-1497124401559-3e75ec2ed794?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60);}
+.movie-card[data-section="marvel"]{background-image:url(https://images.unsplash.com/photo-1505489435671-80a165c60816?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60);}
 .movie-card__overlay {width: 100%;height: 100%;border-radius: 8px;background: linear-gradient(to right, rgba(42, 159, 255, 0.2) 0%, #212120 45%, #212120 100%);background-blend-mode: multiply;position: absolute;top: 0;bottom: 0;right: 0;left: 0;}
 @media screen and (max-width: 600px) {
   .movie-card__overlay {
