--- a/app/views/deals/_body_promotions.html.erb
+++ b/app/views/deals/_body_promotions.html.erb
@@ -70,6 +70,14 @@
   <div class="btn"><a target="_blank" href="https://amzn.to/2XJhkPP">Discover More</a></div>
 </div>
 
+<div class="filter-node promotion_box" data-filter='["coupons","Promotions_Title"]'>
+  <a target="_blank" href="https://amzn.to/2LFFVyy"><img src="https://images.unsplash.com/photo-1465060780892-48505fc8f941?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Prime Pantry"></a>
+  <div class="node-box inner">
+    <h2><a target="_blank" href="https://amzn.to/2LFFVyy">Prime Pantry : Get $10 off orders of $40 or more</a></h2>
+    <em>COUPON CODE: PANTRY</em><span>End Date: Jul. 30. 2020</span>
+  </div>
+  <div class="btn"><a target="_blank" href="https://amzn.to/2LFFVyy">Discover More</a></div>
+</div>
 
 <div class="filter-node promotion_box" data-filter='["brands","Save up to 24% OFF on Apple's iPad (All models)"]'>
   <a target="_blank" href="https://amzn.to/2J4FSuq"><img src="https://images.unsplash.com/photo-1471279136892-55af5dc6895f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="apple ipad deals"></a>
@@ -174,6 +182,26 @@
   </div>
   <div class="btn"><a target="_blank" href="https://amzn.to/308m1Ag">Discover More</a></div>
 </div>
+
+<div class="filter-node promotion_box" data-filter='["promotions","Everything you love about Amazon.
+For your business."]'>
+  <div class="node-box inner">
+    <h2><a target="_blank" href="https://amzn.to/2G4JI4X">Everything you love about Amazon.
+For your business.</a></h2>
+    <p>It is the Amazon you love, for work. Make workplace procurement easier with convenient delivery options, simplified purchasing workflows, multiple payment options, and a competitive marketplace with business-only pricing and quantity discounts. Anyone who makes purchases for work can create a free account for their business. Customer must be from a verified business in order to successfully create their Amazon Business account.</p>
+  </div>
+  <div class="btn"><a target="_blank" href="https://amzn.to/2G4JI4X">Discover More</a></div>
+</div>
+
+<div class="filter-node promotion_box" data-filter='["promotions","Try Amazon Home Services"]'>
+  <div class="node-box inner">
+    <h2><a target="_blank" href="https://amzn.to/2JonEEh">Try Amazon Home Services</a></h2>
+    <p>Amazon Home Services offers customers over a thousand different services from quality, hand-picked pros and backed by Amazon's Happiness Guarantee. Top services available for Customers to purchase include: *House Cleaning *TV Wall Mounting *Smart Home Device Installation *Equipment and Furniture Assembly *Plumbing and Electrical *Handyman *House Painting</p>
+  </div>
+  <div class="btn"><a target="_blank" href="https://amzn.to/2JonEEh">Discover More</a></div>
+</div>
+
+
 
 
 
